chore: add .prettierrc file

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,11 @@
   </head>
   <body class="prose prose-gray max-w-none">
     {{> header }}
+    <p>
+      does this    
+      work
+      <dt>test</dt>
+    </p>
     <main>
       <!-- prettier-ignore -->
       {{> section-hero }} 
